summative.moria.Moria.scala.error
Compilation error:
Moria:1: error: Missing closing brace `}' assumed here
while(!(estFaceMur())){avance()}
^Moria:1: error: Missing closing brace `}' assumed here
while(!(estFaceMur())){avance()}
^Moria:1: error: expected class or object definition
while(!(estFaceMur())){avance()}
^Moria:2: error: expected class or object definition
while(estSurBiscuit() && !estDosMur()) {recule()}
^Moria:3: error: expected class or object definition
var pos : Int = 0
^Moria:4: error: expected class or object definition
if (!estDosMur()) {recule()
^