summative.moria.Moria.scala.code
while(!(estFaceMur())){avance()}
while(estSurBiscuit() && !estDosMur()) {recule()}
var pos : Int = 0
if (!estDosMur()) {recule()
                   while (!(estDosMur()) && ((estSurBiscuit()))) {
                     while(!estSurBiscuit() && !(estDosMur())) {recule(); pos = pos +1}
                     prendBiscuit()
                     for (i<- 0 to pos) {avance()}
                     poseBiscuit()
                     while(estSurBiscuit() && !(estDosMur())) {recule()}
                     pos = 1
  
  